--- a/header.css
+++ b/header.css
@@ -2,7 +2,7 @@
 	height: 50px;
 	width: 1500px;
 	border: none;
-	background-image: url('img/imgpoly.jpg');
+	background-image: url('img/hdrbg.jpg');
 }
 .icondiv{
 	height: 45px;
