--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body{
 	border: none;
 	margin: 10px;
 	font-family: Perpetua;
-	color: orange;
+	color: red;
 	font-size: 26px;
 	font-weight: bold;
 	padding: 10px;
