--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body{
 	height: 1000px;
 	width: 1500px;
 	border: none;
-	background-image: url('img/backgrnd2.jpg');	
+	background-image: url('img/bg42.jpg');	
 }
 .float{
 	float: left;
